--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-map-gl": "^6.0.3",
     "react-mapbox-gl": "^5.1.1",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "worker-loader": "^3.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
