--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "emotion": "^11.0.0",
     "mapbox-gl": "^1.13.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-flip-toolkit": "^7.0.13",
     "react-map-gl": "^6.0.3",
     "react-mapbox-gl": "^5.1.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "recharts": "^2.0.3",
+    "styled-bootstrap-grid": "^3.1.0",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4",
     "worker-loader": "^3.0.7"
   },
